--- a/src/app/contact/Contact.module.css
+++ b/src/app/contact/Contact.module.css
@@ -20,11 +20,11 @@
 
 .formControl {
   display: block;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
+  width: 95%;
+  /* height: calc(1.5em + 0.75rem + 2px); */
+  padding: 0.75rem 0.75rem;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -39,12 +39,13 @@
 }
 .label {
   display: inline-block;
-  margin-bottom: 0.5rem;
+  font-weight: 600;
+  /* margin-bottom: 0.5rem; */
 }
 
 .btn {
   display: inline-block;
-  font-weight: 400;
+  font-weight: 500;
   color: #212529;
   text-align: center;
   vertical-align: middle;
@@ -104,7 +105,7 @@
 
 .btnBlock {
   display: block;
-  width: 100%;
+  width: 95%;
 }
 
 .btnBlock + .btnBlock {
