--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -2,7 +2,7 @@
   margin-left: 0.6rem;
   margin-right: 0.6rem;
   font-size: 2.5rem;
-  color: white;
+  color: rgb(176, 141, 78);
   background-color: black;
   border-radius: 50%;
 }
